# smart-infusion

./: Cargo.toml  README.md
.cargo/: config.toml
logs/: application.log.2025-03-26
src/: api.rs  broker.rs  db.rs  http_client.rs  main.rs  mqtt.rs
src/mq/: amqp.rs  binding.rs  device_data_consumer.rs  device_status.rs  mod.rs  publisher.rs  start_device.rs
src/repository/: bed.rs  device.rs  drug.rs  infusion.rs  mod.rs  patient.rs
