[package]
name = "smart-infusion"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
serde_json = "1.0"
anyhow = "1.0.97"
winapi = { version = "0.3", features = ["wincon"] }
once_cell = "1.19.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "json"] }
rumqttc = "0.23.0"
uuid = { version = "1.6.1", features = ["v4"] }
rumqttd = "0.19.0"
serde_yaml = "0.9"