[package]
name = "smart-infusion"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
serde_json = "1.0"
anyhow = "1.0.97"
winapi = { version = "0.3", features = ["wincon"] }
once_cell = "1.19.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "json"] }
serde_yaml = "0.9"
amqprs = "2.1.0"
reqwest = { version = "0.11", features = ["json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"